# knowledge-extraction-pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PACKAGE_OVERVIEW.md  PRE_PUBLICATION_CHECKLIST.md  PUBLICATION_READY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: quality.yml  type-check.yml
config/: domains.yaml  prompts.yaml
docs/: MONTHLY_MAINTENANCE_CHECKLIST.md  PRODUCTION_DEPLOYMENT_ROADMAP.md  WORKFLOW.md  quickstart.md
docs/user_guide/: processing_pdfs.md
examples/batch_workflow/: README.md  run.py
examples/custom_domain/: README.md  custom_prompts.yaml  run.py
examples/simple_extraction/: README.md  run.py
scripts/: batch_process.py  build_graph.py  import_neo4j.py  infer_relationships_tfidf.py  process_pdf.py  search.py  type_relationships.py
src/knowledge_extraction/: __init__.py
src/knowledge_extraction/core/: __init__.py  document_processor.py  graph_builder.py  monitoring.py  semantic_chunker.py  vector_store.py
src/knowledge_extraction/extraction/: __init__.py  concept_extractor.py  entity_resolver.py  relationship_extractor.py  semantic_batch_optimizer.py
src/knowledge_extraction/mcp/: __init__.py  graph_tools.py  neo4j_tools.py  server.py
src/knowledge_extraction/utils/: __init__.py  path_utils.py  retry.py
src/knowledge_extraction/visualization/: __init__.py  graph_viz.py  optimized_renderer.py
test_real_pdfs/: batch_20260108_172416_metrics.json  batch_results.json
test_real_pdfs/Analysis_2022_Detecting_Deception_Analysis_Competing_Hypotheses/: chunks.json  document.json
test_real_pdfs/Brzic_2023_Detecting_Deception_Using_Natural/: chunks.json  document.json
test_real_pdfs/Choudhury_2024_PU_Lie_Lightweight_Deception_Detection/: chunks.json  document.json
test_real_pdfs/Constâncio_2023_Deception_detection_with_machine/: chunks.json  document.json
test_real_pdfs/Huang_2015_investigation_Zipf_Law_for_fraud/: chunks.json  document.json
test_real_pdfs/Kleinberg_2018_Automated_verbal_credibility_assessment/: chunks.json  document.json
test_real_pdfs/Luan_2021_Sparse_Dense_Attentional_Representations/: chunks.json  document.json
test_real_pdfs/Markowitz_2024_Deconstructing_deception_Frequency_communicator/: chunks.json  document.json
test_real_pdfs/Verma_2024_Roadmap_for_Multilingual_Multimodal_Domain/: chunks.json  document.json
test_real_pdfs/extracting_2018_Text-Based_Detection_and_Understanding_Changes/: chunks.json  document.json
tests/: __init__.py  test_path_security.py  test_pipeline.py  test_real_pdf_processing.py  test_retry.py  test_smoke.py  test_v4_enhancements.py
tests/fixtures/: README.md
tests/test_integration/: test_full_pipeline.py
